fix align-content

--- a/flextheory/styles.css
+++ b/flextheory/styles.css
@@ -124,17 +124,6 @@ p.letter {
 	height: auto;
 }
 
-/*.carre2 {
-	display: flex;
-	justify-content: flex-end;
-	align-items: flex-end;
-	background-color: #272822;
-	color:white;
-	border : 1px solid white;
-	height : auto;
-	width : 40px;
-}*/
-
 /* Order section */
 #order-item1{
 	order: 0;
